fix(dropdown): align center always

--- a/src/css/input.webgen.static.css
+++ b/src/css/input.webgen.static.css
@@ -110,3 +110,7 @@
     box-shadow: none;
     background: hsla(var(--background-color-h), var(--background-color-s), var(--background-color-l), 25%);
 }
+
+.wdropdown {
+    justify-content: space-between;
+}
